--- a/web/styles/_typography.scss
+++ b/web/styles/_typography.scss
@@ -17,7 +17,7 @@ h3 {
 }
 
 pre {
-  font-family: 'Work Sans', Sans-Serif;
+  font-family: 'Noto Sans JP', Sans-Serif;
   white-space: pre-wrap; /* Since CSS 2.1 */
   white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
   white-space: -pre-wrap; /* Opera 4-6 */
@@ -36,7 +36,7 @@ strong {
   font-size: 1.2rem;
   color: $font-primary;
   margin: 0px 0 8px 0;
-  font-family: 'Work Sans', Sans-Serif;
+  font-family: 'Noto Sans JP', Sans-Serif;
   font-weight: 600;
 }
 
@@ -45,7 +45,7 @@ strong {
   font-size: 1.1rem;
   color: lighten($headings-color, 35%);
   margin: 16px 0 12px 0;
-  font-family: 'Work Sans', Sans-Serif;
+  font-family: 'Noto Sans JP', Sans-Serif;
   font-weight: 300;
 }
 
